k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-shiny
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shiny-dev.dide.ic.ac.uk
      secretName: tls-secret
  rules:
    - host: shiny-dev.dide.ic.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shiny-svc
                port:
                  number: 3838
